# bamboost

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bump_version.sh  pyproject.toml  pyrightconfig.json  release-please-config.json  ruff.toml  setup.py  test.Dockerfile  test.local.sh
.github/workflows/: mirror-to-gitlab.yml  release.yml  test.yml
bamboost/: ChangeLog.md  __init__.py  __init__.pyi  _config.py  _example_config.toml  _logger.py  _sqlite_database.py  _typing.py  config.py  config.toml  constants.py  core.py  exceptions.py  index.py  indexer.py  manager.py  plugins.py  reader.py  simulation.py  simulation_writer.py  utilities.py  xdmf.py
bamboost/_repr/: hdf5_group.html  manager.html  series.html  simulation.html
bamboost/accessors/: __init__.py  fielddata.py  globals.py  meshes.py
bamboost/cache2/: database.py  model.py
bamboost/caching/: alchemy.py  api.py  backend_api.py  base.py  engine.py  model.py  schema.py  sql_schema.py
bamboost/cli/: __init__.py  __main__.py  _collection.py  _completion.py  _fast_index_query.py  _formatter.py  _index.py  _render.py  _simple_index.py  alias.py  app.py  common.py  config.py  database.py  indexing.py  job.py  main.py  manager.py  prompt_test.py  run.py  table.tcss
bamboost/common/: __init__.py  deprecation.py  file_handler.py  git_utility.py  hdf_pointer.py  job.py  mpi.py  sqlite.py  utilities.py
bamboost/core/: __init__.py  __init__.pyi  collection.py  manager.py  remote.py  simulation.py  simulation_writer.py  utilities.py  xdmf.py
bamboost/core/accessors/: __init__.py  fielddata.py  globals.py  meshes.py
bamboost/core/common/: __init__.py  _mock_mpi.py  file_handler.py  hdf_pointer.py  mpi.py
bamboost/core/extensions/: __init__.py  fenics.py  remote_manager.py  slurm.py  use_locking.py
bamboost/core/hdf5/: __init__.py  attrs_dict.py  attrsdict.py  dict.py  file.py  file_handler.py  filemap.py  hdf5path.py  hdf_pointer.py  ref.py
bamboost/core/hdf5/accessors/: __init__.py  fielddata.py  globals.py  meshes.py
bamboost/core/html/: icon.txt
bamboost/core/index/: __init__.py  api.py  backend_api.py  base.py  engine.py  index.py  schema.py  sqlite_database.py
bamboost/core/mpi/: __init__.py  mock.py  utilities.py
bamboost/core/simulation/: __init__.py  _repr.py  base.py  dict.py  groups.py  series.py  types.py  writer.py  xdmf.py
bamboost/extensions/: __init__.py  fenics.py  remote_manager.py  slurm.py  use_locking.py
bamboost/html/: group_info.html  hdf5_group.html  icon.txt  manager.html  simulation.html
bamboost/index/: __init__.py  _filtering.py  base.py  cache.py  filtering.py  scanner.py  schema.py  sqlmodel.py  store.py  uids.py  versioning.py
bamboost/indexing/: __init__.py  index.py  sqlite_database.py
bamboost/io/: __init__.py  fenics.py  sqlite.py
bamboost/mpi/: __init__.py  mock.py  serial.py  utilities.py
bamboost/plugins_dev/: fenics.py
bamboost/tui/: __init__.py  api.py  app.py  common.py  keybinds.py
bamboost/tui/pages/: db.py  hdfview.py  welcome.py
bamboost/tui/parser/: parser.py
bamboost/tui/widgets/: autocomplete_edit.py  command_line.py  custom_widgets.py  index.py  rounded_line_box.py  stdout.py  table.py
cli/: __init__.py  main.py
dbmanager/: __init__.py  infile_objects.py  manager.py  postprocessor.py  reader.py  simulation.py  xdmf.py
dbmanager/common/: file_handler.py  git_utility.py  hdf_pointer.py  job.py  utilities.py
docs/: .entrypoint.sh  Dockerfile  README.md
docs/source/: conf.py  dbmanager.rst  index.rst
docs/source/manual/: common.rst  developer_guide.rst
examples/: example_script.py  manager_example.ipynb
examples/group_retreat/: bamboost_tutorial.ipynb  basics.ipynb  lattice_model.py  parametric_study.ipynb
examples/group_retreat/completed_tutorials/: parametric_study_completed.ipynb
examples/tutorial/: basics.ipynb  parametric_study.ipynb
examples/tutorial/completed_tutorials/: basics_completed.ipynb
tests/: conftest.py  run.sh  script.py  test_config.py  test_exceptions.py  test_index.py  test_manager.py  test_mpi.py  test_reader.py  test_utilities.py  test_write.ipynb  test_write.py  test_writer.py
tests/core/: test_collection.py  test_collection_links_df.py  test_core_utilities.py  test_hdf_file.py  test_parameter_validation.py  test_ref.py  test_simulation.py  test_simulation_dict.py  test_utilities.py
tests/index/: test_filtering.py  test_index_collections.py  test_index_initialization.py  test_index_simulations.py  test_index_transactions.py
tests/mpi/: conftest.py  test_parallel.py
tests/paralellization/: README.md  test_write.ipynb
tests/paralellization/test_big_array/: create_test_sims.py  run.sh  run_1_big_array.sh  script.py  test_write_1_big_array.py
tests/paralellization/test_steps/: create_test_sims.py  run.sh  test_write.py
tests/test_collection/: .bamboost-collection-5BBEDABA6B
tests/test_collection/testsim1/: data.h5
tests/test_collection/testsim2/: data.h5
tests/test_collection/testsim3/: data.h5
