[project]
name = "bamboost"
dynamic = ["version"]
description = "A light weight scientific data management system using HDF5"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "MIT"
license-files = ["LICENSE",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hdf5", "database", "database-manager"]
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "pandas",
    "typing-extensions>=4.12.2",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.5",
    "lazy-loader>=0.4",
    "typer>=0.15.2",
]

[project.urls]
Homepage = "https://bamboost.ch/"
repository = "https://gitlab.com/cmbm-ethz/bamboost"
changelog = "https://gitlab.com/cmbm-ethz/bamboost/-/tree/main/CHANGELOG.md"

[project.scripts]
bamboost-cli = "bamboost.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "pip>=24.3.1",
    "twine>=5.1.1",
    "ipywidgets>=8.1.5",
    "commitizen>=4.6.3",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mpi",
]

[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.dev0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
template = ".changelog.tpl"

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
exclude = [
    "build",
    "dist",
    "docs",
    "tests",
    ".venv",
    "**/*.ipynb",
]
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportIncompatibleMethodOverride = false
