[project]
name = "bamboost"
version = "0.12.0"
description = "A light weight scientific data management system using HDF5"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "MIT"
license-files = ["LICENSE",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hdf5", "database", "database-manager"]
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "pandas",
    "typing-extensions>=4.12.2",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.5",
    "lazy-loader>=0.4",
    "typer>=0.15.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://bamboost.ch/"
repository = "https://gitlab.com/cmbm-ethz/bamboost"
changelog = "https://gitlab.com/cmbm-ethz/bamboost/-/tree/main/CHANGELOG.md"

[project.scripts]
bamboost = "bamboost.cli:app"
bamboost-cli = "bamboost.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "pip>=24.3.1",
    "twine>=5.1.1",
    "ipywidgets>=8.1.5",
    "commitizen>=4.6.3",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mpi",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
exclude = [
    "build",
    "dist",
    "docs",
    "tests",
    ".venv",
    "**/*.ipynb",
]
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportIncompatibleMethodOverride = false

[tool.coverage.run]
source = ["bamboost"]
omit = [
    "bamboost/cli/*",
]
